# AnyStrEnum

./: .editorconfig  .gitignore  LICENCE  Makefile  Pipfile  README.md  README.rst  pyproject.toml  setup.py  test_anystrenum.py  test_strenum.py
anystrenum/: __init__.py  anystrenum.py  inflected.py
