[tool.poetry]
name = "AnyStrEnum"
version = "0.2.0"
description = "Elegant implementation of Enum which inherits from str or bytes"
authors = ["MrMrRobat <appkiller16@gmail.com>"]
url="https://github.com/MrMrRobat/AnyStrEnum"
readme = "README.md"
license = "MIT"
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "enum", "str", "strenum", "bytesenum", "bytestrenum", "typing", "auto", "autoenum",
]

[tool.poetry.dependencies]
python = ">=3.6"

[tool.poetry.dev-dependencies]
pytest = "*"


[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[tool.dephell.pytest]
from = {format = "poetry", path = "pyproject.toml"}
tests = ["test_anystrenum.py"]
command = "pytest"

[tool.dephell.poetry]
from = {format = "poetry",path = "pyproject.toml"}
to = {format = "setuppy",path = "setup.py"}
